package com.glance.spaces.zapp.content;

import com.glance.spaces.zapp.content.WidgetContent;
import com.glance.spaces.zapp.content.common.HeadlinesLnElement;
import com.glance.spaces.zapp.content.common.HeadlinesMdElement;
import com.glance.spaces.zapp.content.common.HeadlinesXxlElement;
import com.glance.spaces.zapp.content.common.InfinityScrollLvElement;
import com.glance.spaces.zapp.content.common.RoundupCardElement;
import com.glance.spaces.zapp.content.common.RoundupDataElement;
import com.glance.spaces.zapp.content.games.CommunityXxlElement;
import com.glance.spaces.zapp.content.games.EditorsChoiceXxlElement;
import com.glance.spaces.zapp.content.games.FeaturedGameXlElement;
import com.glance.spaces.zapp.content.games.GamesLnElement;
import com.glance.spaces.zapp.content.games.GamesMdElement;
import com.glance.spaces.zapp.content.games.InstantGameXxlElement;
import com.glance.spaces.zapp.content.games.LeaderboardGameLhElement;
import com.glance.spaces.zapp.content.games.LiveStreamXxlElement;
import com.glance.spaces.zapp.content.games.NewArrivalsXlElement;
import com.glance.spaces.zapp.content.games.PartnerGameXxlElement;
import com.glance.spaces.zapp.content.games.RecentlyPlayedGamesLnElement;
import com.glance.spaces.zapp.content.games.RecentlyPlayedGamesMdElement;
import com.glance.spaces.zapp.content.games.TopInstantGameXlElement;
import com.glance.spaces.zapp.content.games.TopThreeMxlElement;
import com.glance.spaces.zapp.content.games.y;
import com.glance.spaces.zapp.content.horoscope.HoroscopeLhElement;
import com.glance.spaces.zapp.content.preferences.SetPreferenceElement;
import com.glance.spaces.zapp.content.roposo.EntertainmentLnElement;
import com.glance.spaces.zapp.content.roposo.EntertainmentMdElement;
import com.glance.spaces.zapp.content.roposo.EntertainmentVideoLhElement;
import com.glance.spaces.zapp.content.roposo.HotTopicXlElement;
import com.glance.spaces.zapp.content.roposo.TrendsXxlElement;
import com.glance.spaces.zapp.content.shop.BudgetBuyLs;
import com.glance.spaces.zapp.content.shop.DailyDeal;
import com.glance.spaces.zapp.content.shop.ProductDropsLvElement;
import com.glance.spaces.zapp.content.shop.TrendingToday;
import com.glance.spaces.zapp.content.shop.TrendingTodayLs;
import com.glance.spaces.zapp.content.sports.MatchLnElement;
import com.glance.spaces.zapp.content.sports.MatchXsElement;
import com.glance.spaces.zapp.content.sports.MatchXxl;
import com.glance.spaces.zapp.content.sports.NbaMatchElement;
import com.glance.spaces.zapp.content.sports.OffSeason;
import com.glance.spaces.zapp.content.sports.SportsHeadlinesXxlElement;
import com.glance.spaces.zapp.content.sports.StandingsXxlElement;
import com.glance.spaces.zapp.content.trendz.BreakingNewsMdElement;
import com.glance.spaces.zapp.content.trendz.CategorisedLvXxlElement;
import com.glance.spaces.zapp.content.trendz.TaggedArticleLhElement;
import com.glance.spaces.zapp.content.trendz.TaggedArticleLnElement;
import com.google.protobuf.MessageOrBuilder;
import com.zapp.oneweatherzapp.ag1;
import com.zapp.oneweatherzapp.dg1;
import com.zapp.oneweatherzapp.ed0;
import com.zapp.oneweatherzapp.ep4;
import com.zapp.oneweatherzapp.ex4;
import com.zapp.oneweatherzapp.fo;
import com.zapp.oneweatherzapp.gf2;
import com.zapp.oneweatherzapp.gp4;
import com.zapp.oneweatherzapp.hk1;
import com.zapp.oneweatherzapp.ik1;
import com.zapp.oneweatherzapp.km2;
import com.zapp.oneweatherzapp.kv1;
import com.zapp.oneweatherzapp.n64;
import com.zapp.oneweatherzapp.nk1;
import com.zapp.oneweatherzapp.nx3;
import com.zapp.oneweatherzapp.o33;
import com.zapp.oneweatherzapp.pt;
import com.zapp.oneweatherzapp.px4;
import com.zapp.oneweatherzapp.qb3;
import com.zapp.oneweatherzapp.qq3;
import com.zapp.oneweatherzapp.rh4;
import com.zapp.oneweatherzapp.sj3;
import com.zapp.oneweatherzapp.sm2;
import com.zapp.oneweatherzapp.t05;
import com.zapp.oneweatherzapp.t10;
import com.zapp.oneweatherzapp.tu0;
import com.zapp.oneweatherzapp.u05;
import com.zapp.oneweatherzapp.um2;
import com.zapp.oneweatherzapp.uo1;
import com.zapp.oneweatherzapp.vw0;
import com.zapp.oneweatherzapp.vy2;
import com.zapp.oneweatherzapp.we5;
import com.zapp.oneweatherzapp.wl;
import com.zapp.oneweatherzapp.wt1;
import com.zapp.oneweatherzapp.ww0;
import com.zapp.oneweatherzapp.xf4;
import com.zapp.oneweatherzapp.xw0;
import com.zapp.oneweatherzapp.z05;
import com.zapp.oneweatherzapp.zo;
import com.zapp.oneweatherzapp.zo1;
/* compiled from: WidgetContentOrBuilder.java */
/* loaded from: classes2.dex */
public interface m extends MessageOrBuilder {
    BgInfoXsElement getBgInfoXsElement();

    wl getBgInfoXsElementOrBuilder();

    BreakingNewsMdElement getBreakingNewsMdElement();

    fo getBreakingNewsMdElementOrBuilder();

    BudgetBuyLs getBudgetBuyLs();

    zo getBudgetBuyLsOrBuilder();

    CommunityXxlElement getCommunityXxlElement();

    t10 getCommunityXxlElementOrBuilder();

    DailyDeal getDailyDealLs();

    ed0 getDailyDealLsOrBuilder();

    DailyDeal getDailyDealXl();

    ed0 getDailyDealXlOrBuilder();

    EditorsChoiceXxlElement getEditorsChoiceXxlElement();

    tu0 getEditorsChoiceXxlElementOrBuilder();

    EntertainmentLnElement getEntertainmentLnElement();

    vw0 getEntertainmentLnElementOrBuilder();

    EntertainmentMdElement getEntertainmentMdElement();

    ww0 getEntertainmentMdElementOrBuilder();

    EntertainmentVideoLhElement getEntertainmentVideoLh();

    xw0 getEntertainmentVideoLhOrBuilder();

    FeaturedGameXlElement getFeaturedGameXl();

    com.glance.spaces.zapp.content.games.g getFeaturedGameXlOrBuilder();

    GamesLnElement getGamesLnElement();

    ag1 getGamesLnElementOrBuilder();

    GamesMdElement getGamesMdElement();

    dg1 getGamesMdElementOrBuilder();

    HeadlinesLnElement getHeadlinesLnElement();

    hk1 getHeadlinesLnElementOrBuilder();

    HeadlinesMdElement getHeadlinesMdElement();

    ik1 getHeadlinesMdElementOrBuilder();

    HeadlinesXxlElement getHeadlinesXxl();

    nk1 getHeadlinesXxlOrBuilder();

    HoroscopeLhElement getHoroscopeLhElement();

    uo1 getHoroscopeLhElementOrBuilder();

    HotTopicXlElement getHotTopicXlElement();

    zo1 getHotTopicXlElementOrBuilder();

    InfinityScrollLvElement getInfinityScrollLvElement();

    wt1 getInfinityScrollLvElementOrBuilder();

    InstantGameXxlElement getInstantGameXxlElement();

    kv1 getInstantGameXxlElementOrBuilder();

    LeaderboardGameLhElement getLeaderboardGameLh();

    com.glance.spaces.zapp.content.games.o getLeaderboardGameLhOrBuilder();

    MatchXxl getLeagueMatchXxl();

    um2 getLeagueMatchXxlOrBuilder();

    LiveStreamXxlElement getLiveStreamXxlElement();

    gf2 getLiveStreamXxlElementOrBuilder();

    MatchLnElement getMatchLnElement();

    km2 getMatchLnElementOrBuilder();

    MatchXsElement getMatchXsElement();

    sm2 getMatchXsElementOrBuilder();

    NbaMatchElement getNbaMatch();

    com.glance.spaces.zapp.content.sports.g getNbaMatchOrBuilder();

    NewArrivalsXlElement getNewArrivalsXlElement();

    vy2 getNewArrivalsXlElementOrBuilder();

    OffSeason getOffSeasonMxl();

    o33 getOffSeasonMxlOrBuilder();

    PartnerGameXxlElement getPartnerGameXxlElement();

    qb3 getPartnerGameXxlElementOrBuilder();

    ProductDropsLvElement getProductDropsLv();

    sj3 getProductDropsLvOrBuilder();

    RecentlyPlayedGamesLnElement getRecentlyPlayedGamesLn();

    qq3 getRecentlyPlayedGamesLnOrBuilder();

    RecentlyPlayedGamesMdElement getRecentlyPlayedGamesMd();

    y getRecentlyPlayedGamesMdOrBuilder();

    RoundupCardElement getRoundupCardElementLn();

    com.glance.spaces.zapp.content.common.r getRoundupCardElementLnOrBuilder();

    RoundupCardElement getRoundupCardElementMd();

    com.glance.spaces.zapp.content.common.r getRoundupCardElementMdOrBuilder();

    RoundupDataElement getRoundupDataElement();

    nx3 getRoundupDataElementOrBuilder();

    SetPreferenceElement getSetPreferenceElement();

    n64 getSetPreferenceElementOrBuilder();

    SportsHeadlinesXxlElement getSportsHeadlinesXxl();

    xf4 getSportsHeadlinesXxlOrBuilder();

    StandingsXxlElement getStandingsXxlElement();

    rh4 getStandingsXxlElementOrBuilder();

    TaggedArticleLhElement getTaggedArticle();

    TaggedArticleLnElement getTaggedArticleLnElement();

    gp4 getTaggedArticleLnElementOrBuilder();

    ep4 getTaggedArticleOrBuilder();

    MatchXxl getTeamMatchXxl();

    um2 getTeamMatchXxlOrBuilder();

    TopInstantGameXlElement getTopInstantGameXl();

    ex4 getTopInstantGameXlOrBuilder();

    CategorisedLvXxlElement getTopStoryCategorisedLvXxl();

    pt getTopStoryCategorisedLvXxlOrBuilder();

    TopThreeMxlElement getTopThreeMxlElement();

    px4 getTopThreeMxlElementOrBuilder();

    TrendingTodayLs getTrendingTodayLs();

    t05 getTrendingTodayLsOrBuilder();

    TrendingToday getTrendingTodayXxl();

    u05 getTrendingTodayXxlOrBuilder();

    TrendsXxlElement getTrendsXxlElement();

    z05 getTrendsXxlElementOrBuilder();

    WidgetContent.TypedElementCase getTypedElementCase();

    WeatherInfoLnElement getWeatherInfoLnElement();

    we5 getWeatherInfoLnElementOrBuilder();

    boolean hasBgInfoXsElement();

    boolean hasBreakingNewsMdElement();

    boolean hasBudgetBuyLs();

    boolean hasCommunityXxlElement();

    boolean hasDailyDealLs();

    boolean hasDailyDealXl();

    boolean hasEditorsChoiceXxlElement();

    boolean hasEntertainmentLnElement();

    boolean hasEntertainmentMdElement();

    boolean hasEntertainmentVideoLh();

    boolean hasFeaturedGameXl();

    boolean hasGamesLnElement();

    boolean hasGamesMdElement();

    boolean hasHeadlinesLnElement();

    boolean hasHeadlinesMdElement();

    boolean hasHeadlinesXxl();

    boolean hasHoroscopeLhElement();

    boolean hasHotTopicXlElement();

    boolean hasInfinityScrollLvElement();

    boolean hasInstantGameXxlElement();

    boolean hasLeaderboardGameLh();

    boolean hasLeagueMatchXxl();

    boolean hasLiveStreamXxlElement();

    boolean hasMatchLnElement();

    boolean hasMatchXsElement();

    boolean hasNbaMatch();

    boolean hasNewArrivalsXlElement();

    boolean hasOffSeasonMxl();

    boolean hasPartnerGameXxlElement();

    boolean hasProductDropsLv();

    boolean hasRecentlyPlayedGamesLn();

    boolean hasRecentlyPlayedGamesMd();

    boolean hasRoundupCardElementLn();

    boolean hasRoundupCardElementMd();

    boolean hasRoundupDataElement();

    boolean hasSetPreferenceElement();

    boolean hasSportsHeadlinesXxl();

    boolean hasStandingsXxlElement();

    boolean hasTaggedArticle();

    boolean hasTaggedArticleLnElement();

    boolean hasTeamMatchXxl();

    boolean hasTopInstantGameXl();

    boolean hasTopStoryCategorisedLvXxl();

    boolean hasTopThreeMxlElement();

    boolean hasTrendingTodayLs();

    boolean hasTrendingTodayXxl();

    boolean hasTrendsXxlElement();

    boolean hasWeatherInfoLnElement();
}
